turtleart.diskfourth.DiskFourth.scala.error
Compilation error:
DiskFourth:3: error: not found: value fourthcircle
    fourthcircle(i)
    ^