turtleart.diskfourth.DiskFourth.scala.code
override def run() {
  for(i<-1 to 100){
    fourthcircle(i)
  }
}